[package]
name = "native-fundraiser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "=2.0.10"
spl-token = { version = "=6.0.0", features = ["no-entrypoint"] }
borsh = { version = "1.5.1", features = ["derive"] }
thiserror = "2.0.3"

[dev-dependencies]
mollusk-svm = { git = "https://github.com/deanmlittle/mollusk" }
mollusk-token = { git = "https://github.com/deanmlittle/mollusk" }
solana-sdk = "=2.0.10"
spl-token = { version = "=6.0.0", features = ["no-entrypoint"] }
